deploy/rss-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-bot
  namespace: real
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-bot
  template:
    metadata:
      labels:
        app: rss-bot
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: 
        name: rss-bot
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.5
            memory: 1Gi
          requests:
            cpu: 0.1
            memory: 500Mi
        ports:
        - containerPort: 3000
          name: 3000tcp01
          protocol: TCP
